--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h2>What I'm working on</h2>
         <p>
             I'm obsessed with learning new technologies, especially in the fields of networking. Currently, I'm diving deep into cloud computing and automation.
-            To keep up with my learning journey, I often write about my experiences and projects on my blog.
+            To keep up with my learning journey, I decided to create a blog to document my experiences and keep me on track.
             For the rest of June 2025, I've set a goal to build a bad ass home lab that will help me experiment with various networking technologies and cloud platforms.
         </p>
     </body>
