--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
-<html>
-    <h1>
-        Hey, I'm Jeff!
-    </h1>
-    <body>
-        <h2>About me</h2>
-        <p>
-            I am a geek, a nerd, a network engineer, and a gamer.
-        </p>
-        <h2>What I'm working on</h2>
-        <p>
-            I'm obsessed with learning new technologies, especially in the fields of networking. Currently, I'm diving deep into cloud computing and automation.
-            To keep up with my learning journey, I decided to create a blog to document my experiences and keep me on track.
-            For the rest of June 2025, I've set a goal to build a bad ass home lab that will help me experiment with various networking technologies and cloud platforms.
-        </p>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Me</title>
+</head>
+<body>
+    <h2>About me</h2>
+    <p>
+        I am a geek, a nerd, a network engineer, and a gamer.
+    </p>
+    <h2>What I'm working on</h2>
+    <p>
+        I'm obsessed with learning new technologies, especially in the fields of networking. Currently, I'm diving deep into cloud computing and automation.
+        To keep up with my learning journey, I decided to create a blog to document my experiences and keep me on track.
+        For the rest of June 2025, I've set a goal to build a bad ass home lab that will help me experiment with various networking technologies and cloud platforms.
+    </p>
+    <a href="building_a_blog.html">Read: Building a Blog</a>
+    <p>
+        <a href="building%20a%20blog">Read: Building a Blog</a>
+    </p>
+</body>
 </html>
