--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>About Me</title>
 </head>
 <body>
+    <html>
+    <h1>
+        Hey, I'm Jeff!
+    </h1>
     <h2>About me</h2>
     <p>
         I am a geek, a nerd, a network engineer, and a gamer.
