--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
         To keep up with my learning journey, I decided to create a blog to document my experiences and keep me on track.
         For the rest of June 2025, I've set a goal to build a bad ass home lab that will help me experiment with various networking technologies and cloud platforms.
     </p>
-    <a href="building_a_blog.html">Read: Building a Blog</a>
+    <a href="building_a_blog.html">Building a Blog</a>
 </body>
 </html>
