--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
         For the rest of June 2025, I've set a goal to build a bad ass home lab that will help me experiment with various networking technologies and cloud platforms.
     </p>
     <a href="building_a_blog.html">Building a Blog</a>
+    <a href="projects.html">My Projects</a>
 </body>
 </html>
