--- a/building_a_blog.html
+++ b/building_a_blog.html
@@ -7,65 +7,65 @@
     <h1>
         Building a Tech Blog from Scratch in 2025 – A Network Engineer’s Journey
     </h1>
-<body>
-    <h2>
-        Why I’m Starting a Tech Blog in 2025
-    </h2>
-        <p>
-            Well, frankly I'm making a lot of changes and starting multiple new chapters in my life—this blog is just one of them.
-            But <i>why</i> am I building this blog? Specifically, I want to document my journey towards becoming a better network engineer, share my thoughts on networking, and connect with others who might be on similar 
-            paths.
-        </p>
-        <p>
-            Whether you're considering a career in networking, or just getting started in tech, I hope what I share here will be valuable to you.
-        </p>
+    <body>
+        <h2>
+            Why I’m Starting a Tech Blog in 2025
+        </h2>
+            <p>
+                Well, frankly I'm making a lot of changes and starting multiple new chapters in my life—this blog is just one of them.
+                But <i>why</i> am I building this blog? Specifically, I want to document my journey towards becoming a better network engineer, share my thoughts on networking, and connect with others who might 
+                be on similar paths.
+            </p>
+            <p>
+                Whether you're considering a career in networking, or just getting started in tech, I hope what I share here will be valuable to you.
+            </p>
 
-    <h2>
-        How I'm Building This Website (and Why)
-    </h2>
-        <p>
-            I’m building this blog from scratch using HTML, CSS, and some help from AI tools. My goal is to learn by doing—exploring different web technologies, experimenting with design and code, and sharing every 
-            lesson I pick up along the way.
-        </p>
-        <p>
-            AI is a big topic in tech right now. For transparency: I’m on the cautious side of the conversation. I believe AI should be used to enhance human skills, not replace them. I use it to brainstorm ideas, 
-            generate starter code, and occasionally draft content—but I always ensure the final product is my own work. I'm here to learn, build, and grow-something AI can't do.
-        </p>
+        <h2>
+            How I'm Building This Website (and Why)
+        </h2>
+            <p>
+                I’m building this blog from scratch using HTML, CSS, and some help from AI tools. My goal is to learn by doing—exploring different web technologies, experimenting with design and code, and sharing every 
+                lesson I pick up along the way.
+            </p>
+            <p>
+                AI is a big topic in tech right now. For transparency: I’m on the cautious side of the conversation. I believe AI should be used to enhance human skills, not replace them. I use it to brainstorm ideas, 
+                generate starter code, and occasionally draft content—but I always ensure the final product is my own work. I'm here to learn, build, and grow-something AI can't do.
+            </p>
+            
+        <h2>
+            My Background in Web Development
+        </h2>
+            <p>
+                My web development journey started back in 2008, during my college years. Computer science always intrigued me, and I wanted to learn how to build programs of my own. I began with HTML and CSS, 
+                then moved on to PHP and MySQL. I built a few small projects for school but never pursued it seriously at the time.
+            </p>
+            <p>
+                Despite my interest in computer science, I chose a different path. I struggled with math, and at the time, it felt like a barrier to entering the field. So, I shifted toward IT—specifically 
+                networking—because it was more approachable for me, and I've made it into a fulfilling career for myself. Still, the passion to create—especially with code—never went away
+            </p>
+            <p>
+                This blog is a way for me to rekindle that passion.
+            </p>
 
-    <h2>
-        My Background in Web Development
-    </h2>
-        <p>
-            My web development journey started back in 2008, during my college years. Computer science always intrigued me, and I wanted to learn how to build programs of my own. I began with HTML and CSS, 
-            then moved on to PHP and MySQL. I built a few small projects for school but never pursued it seriously at the time.
-        </p>
-        <p>
-            Despite my interest in computer science, I chose a different path. I struggled with math, and at the time, it felt like a barrier to entering the field. So, I shifted toward IT—specifically 
-            networking—because it was more approachable for me, and I've made it into a fulfilling career for myself. Still, the passion to create—especially with code—never went away
-        </p>
-        <p>
-            This blog is a way for me to rekindle that passion.
-        </p>
+        <h2>
+            What You Can Expect
+        </h2>
+            <p>
+                If you're exploring networking as a career, dabbling in programming, or curious about how AI and automation fits into tech workflows, you’ll find real-world insights here. I’ll be documenting:
+            </p>
+                <ul>
+                    <li>Learning milestones</li>
+                    <li>Networking projects</li>
+                    <li>Networking certifications and study tips</li>
+                    <li>Lessons from building a homelab</li>
+                </ul>
 
-    <h2>
-        What You Can Expect
-    </h2>
-        <p>
-            If you're exploring networking as a career, dabbling in programming, or curious about how AI and automation fits into tech workflows, you’ll find real-world insights here. I’ll be documenting:
-        </p>
-        <ul>
-            <li>Learning milestones</li>
-            <li>Networking projects</li>
-            <li>Networking certifications and study tips</li>
-            <li>Lessons from building a homelab</li>
-        </ul>
-        
-    <h2>
-        Final Thoughts
-    </h2>
-        <p>
-            Thanks for stopping by! If you’re someone who’s just entering the networking field—or you’re thinking about it-feel free to follow my journey. 
-            I’ll be sharing what I learn, the mistakes I make, and hopefully a few insights that can help you on your own journey too.
-        </p>
-</body>
+        <h2>
+            Final Thoughts
+        </h2>
+            <p>
+                Thanks for stopping by! If you’re someone who’s just entering the networking field—or you’re thinking about it-feel free to follow my journey. 
+                I’ll be sharing what I learn, the mistakes I make, and hopefully a few insights that can help you on your own journey too.
+            </p>
+    </body>
 </html>
