fixed link layout
Links were on the same line, now they are on their own line using <div> elements.

--- a/index.html
+++ b/index.html
@@ -5,22 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
 </head>
-<body>
+    <body>
     <html>
     <h1>
         Hey, I'm Jeff!
     </h1>
-    <h2>About me</h2>
-    <p>
-        I am a geek, a nerd, a network engineer, and a gamer.
-    </p>
-    <h2>What I'm working on</h2>
-    <p>
-        I'm obsessed with learning new technologies, especially in the fields of networking. Currently, I'm diving deep into cloud computing and automation.
-        To keep up with my learning journey, I decided to create a blog to document my experiences and keep me on track.
-        For the rest of June 2025, I've set a goal to build a bad ass home lab that will help me experiment with various networking technologies and cloud platforms.
-    </p>
-    <a href="building_a_blog.html">Building a Blog</a>
-    <a href="projects.html">My Projects</a>
-</body>
+        <h2>About me</h2>
+            <p>
+                I am a geek, a nerd, a network engineer, and a gamer.
+            </p>
+        <h2>What I'm working on</h2>
+            <p>
+                I'm obsessed with learning new technologies, especially in the fields of networking. Currently, I'm diving deep into cloud computing and automation.
+                To keep up with my learning journey, I decided to create a blog to document my experiences and keep me on track.
+                For the rest of June 2025, I've set a goal to build a bad ass home lab that will help me experiment with various networking technologies and cloud platforms.
+            </p>
+                <div>
+                    <a href="building_a_blog.html">Building a Tech Blog from Scratch in 2025 – A Network Engineer’s Journey</a>
+                </div>
+                <div>
+                    <a href="projects.html">My Networking Projects</a>
+                </div>
+    </body>
 </html>
