--- a/building_a_blog.html
+++ b/building_a_blog.html
@@ -2,57 +2,65 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>Building A Blog</title>
+
+    <!-- Responsive -->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- Primary Meta Tags -->
+    <title>Building a Tech Blog from Scratch in 2025 – A Network Engineer’s Journey</title>
+    <meta name="description" content="Discover why Jeff—an experienced network engineer and web developer—is launching a tech blog in 2025. Follow his journey in network engineering, web development, and responsible AI use." />
+    <meta name="keywords" content="tech blog 2025, network engineering blog, web development journey, AI in web dev, home lab experiments, cloud computing" />
+    <meta name="author" content="Jeff Fuqua" />
+
 </head>
-    <h1>
-        Building a Tech Blog from Scratch in 2025 – A Network Engineer’s Journey
-    </h1>
     <body>
-        <h2>
-            Why I’m Starting a Tech Blog in 2025
-        </h2>
-            <p>
-                Well, frankly I'm making a lot of changes and starting multiple new chapters in my life—this blog is just one of them.
-                But <i>why</i> am I building this blog? Specifically, I want to document my journey towards becoming a better network engineer, share my thoughts on networking, and connect with others who might 
-                be on similar paths.
-            </p>
-            <p>
-                Whether you're considering a career in networking, or just getting started in tech, I hope what I share here will be valuable to you.
-            </p>
+          <article>
+            <header>
+                <h1>Building a Tech Blog from Scratch in 2025 – A Network Engineer’s Journey</h1>
+                <p><em>Documenting my journey into becoming a better network engineer.</em></p>
+            </header>
 
-        <h2>
-            How I'm Building This Website (and Why)
-        </h2>
-            <p>
-                I’m building this blog from scratch using HTML, CSS, and some help from AI tools. My goal is to learn by doing—exploring different web technologies, experimenting with design and code, and sharing every 
-                lesson I pick up along the way.
-            </p>
-            <p>
-                AI is a big topic in tech right now. For transparency: I’m on the cautious side of the conversation. I believe AI should be used to enhance human skills, not replace them. I use it to brainstorm ideas, 
-                generate starter code, and occasionally draft content—but I always ensure the final product is my own work. I'm here to learn, build, and grow-something AI can't do.
-            </p>
-            
-        <h2>
-            My Background in Web Development
-        </h2>
-            <p>
-                My web development journey started back in 2008, during my college years. Computer science always intrigued me, and I wanted to learn how to build programs of my own. I began with HTML and CSS, 
-                then moved on to PHP and MySQL. I built a few small projects for school but never pursued it seriously at the time.
-            </p>
-            <p>
-                Despite my interest in computer science, I chose a different path. I struggled with math, and at the time, it felt like a barrier to entering the field. So, I shifted toward IT—specifically 
-                networking—because it was more approachable for me, and I've made it into a fulfilling career for myself. Still, the passion to create—especially with code—never went away
-            </p>
-            <p>
-                This blog is a way for me to rekindle that passion.
-            </p>
+            <section id="why-blog">
+                <h2>“Why”: The Purpose Behind This Blog</h2>
+                    <p>Well, frankly I'm making a lot of changes and starting multiple new chapters in my life—this blog is just one of them. But <i>why</i> am I building this blog? 
+                    <p>In 2025, I’m launching a blog to share my firsthand experiences as a <strong>network engineer</strong> and <strong>web developer</strong>. This blog will:</p>
+                    <ul>
+                        <li>Document my path toward becoming a certified <strong>CCNA and CCNP network engineer</strong>.</li>
+                        <li>Connect with other <strong>tech enthusiasts</strong> and professionals navigating similar career paths.</li>
+                    </ul>
+            </section>
 
-        <h2>
-            What You Can Expect
-        </h2>
-            <p>
-                If you're exploring networking as a career, dabbling in programming, or curious about how AI and automation fits into tech workflows, you’ll find real-world insights here. I’ll be documenting:
-            </p>
+            <section id="how-blog">
+                <h2>“How”: Building &amp; Growing This Platform</h2>
+                <p>My goal is to:</p>
+                <ol>
+                    <li>Design responsive layouts with <strong>HTML5</strong> &amp; <strong>CSS3</strong>.</li>
+                    <li>Experiment with basic <strong>JavaScript</strong> for interactivity.</li>
+                    <li>Automate deployment using <strong>Git</strong> and CI/CD pipelines.</li>
+                    <li>Leverage AI to brainstorm content, generate code snippets, and optimize my workflow—always vetting and customizing every output to ensure originality.</li>
+                </ol>
+            </section>
+
+            <section id="my-background">
+                <h2>My Background in Web Development</h2>
+                    <p>My journey started back in 2008, during my college years. Computer science always intrigued me, and I wanted to learn how to build programs of my own. I began with HTML and CSS, then moved on to PHP and MySQL. I built a few small projects for school but never pursued it seriously at the time.</p>
+                    <p>Despite my interest in computer science, I chose a different path. I struggled with math, and at the time, it felt like a barrier to entering the field. So, I shifted toward IT—specifically networking—because it was more approachable for me, and I've made it into a fulfilling career for myself. Still, the passion to create—especially with code—never went away</p>
+                    <p>This blog is a way for me to rekindle that passion.</p>
+            </section>
+
+            <section id="my-networking-journey">
+                <h2>My Journey in Networking</h2>
+                    <p>Fast forward to 2025, I’m now a network engineer with over 10 years of experience. I’ve worked with everything from small business networks to large enterprise systems. I’ve seen the evolution of networking technologies—from the rise of cloud computing to the increasing importance of automation and AI.</p>
+                    <p>As I continue to grow in my career, I want to share what I learn along the way. This blog will be a space for:</p>
+                    <ul>
+                        <li>Hands-on tutorials</li>
+                        <li>Configuration examples</li>
+                        <li>Real-world troubleshooting tips</li>
+                    </ul>
+            </section>
+
+        <h2>What You Can Expect</h2>
+            <p>If you're exploring networking as a career, dabbling in programming, or curious about how AI and automation fits into tech workflows, you’ll find real-world insights here. I’ll be documenting:</p>
                 <ul>
                     <li>Learning milestones</li>
                     <li>Networking projects</li>
@@ -60,12 +68,12 @@
                     <li>Lessons from building a homelab</li>
                 </ul>
 
-        <h2>
-            Final Thoughts
-        </h2>
-            <p>
-                Thanks for stopping by! If you’re someone who’s just entering the networking field—or you’re thinking about it-feel free to follow my journey. 
-                I’ll be sharing what I learn, the mistakes I make, and hopefully a few insights that can help you on your own journey too.
-            </p>
+        <h2>Final Thoughts</h2>
+            <p>Thanks for stopping by! If you’re someone who’s just entering the networking field—or you’re thinking about it-feel free to follow my journey. I’ll be sharing what I learn, the mistakes I make, and hopefully a few insights that can help you on your own journey too.</p>
+                
+            <footer>
+                <p>&copy; 2025 Jeff Fuqua. All rights reserved.</p>
+            </footer>
+        </article>
     </body>
 </html>
