--- a/index.html
+++ b/index.html
@@ -1,30 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
+    <meta charset="UTF-8" />
+
+    <!-- Responsive -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Primary Meta Tags -->
+    <title>Jeff’s Networking Blog | Network Engineer, Home Lab, Automation</title>
+    <meta name="description" content="Join Jeff—a seasoned network engineer and gamer—as he builds his June 2025 home lab, explores cloud computing, and masters automation. Follow his hands-on tutorials and real-world insights." />
+    <meta name="keywords" content="network engineer blog, cloud computing tutorial, home lab setup, network automation, networking technologies, June 2025 goals" />
 </head>
     <body>
-    <html>
-    <h1>
-        Hey, I'm Jeff!
-    </h1>
-        <h2>About me</h2>
-            <p>
-                I am a geek, a nerd, a network engineer, and a gamer.
-            </p>
-        <h2>What I'm working on</h2>
-            <p>
-                I'm obsessed with learning new technologies, especially in the fields of networking. Currently, I'm diving deep into cloud computing and automation.
-                To keep up with my learning journey, I decided to create a blog to document my experiences and keep me on track.
-                For the rest of June 2025, I've set a goal to build a bad ass home lab that will help me experiment with various networking technologies and cloud platforms.
-            </p>
+          <header>
+            <h1>Jeff’s Networking Blog</h1>
+                <p><em>Exploring home lab builds, cloud computing, and network automation</em></p>
+        </header>
+
+        <section id="about">
+            <h2>About Me</h2>
+                <p>I’m <strong>Jeff</strong>—a geek, a nerd, a <strong>network engineer</strong>, and a gamer. On this blog, I share my real-world experience with <strong>networking technologies</strong>, <strong>cloud platforms</strong>, and <strong>automation workflows</strong>.</p>
+        </section>
+
+        <section id="projects">
+            <h2>What I’m Working On</h2>
+                <p>I'm obsessed with learning new technologies-especially in the fields of networking.</p>
+                <ul>
+                    <li><strong>Home Lab Build (June 2025)</strong>: Assembling a badass on-premises lab to experiment with routers, switches, and virtual cloud environments.</li>
+                    <li><strong>Network Automation</strong>: Writing Python scripts and Ansible playbooks to automate common network tasks.</li>
+                </ul>
+                <p>Follow along for step-by-step guides, configuration snippets, and troubleshooting tips.</p>
+        </section>
+
+        <section id="links">
                 <div>
                     <a href="building_a_blog.html">Building a Tech Blog from Scratch in 2025 – A Network Engineer’s Journey</a>
                 </div>
                 <div>
                     <a href="projects.html">My Networking Projects</a>
                 </div>
+        </section>
+
+        <footer>
+            <p>&copy; 2025 Jeff Fuqua. All rights reserved.</p>
+        </footer>
     </body>
 </html>
