--- a/projects.html
+++ b/projects.html
@@ -2,19 +2,48 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>Projects</title>
+
+    <!-- Responsive -->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+      <!-- Primary Meta Tags -->
+    <title>My Networking Projects</title>
+    <meta name="description" content="Follow Jeff’s hands-on network engineering projects: RetroPie on Raspberry Pi, wired home office setup, locally hosted LLM, and AI-powered Pi security cameras." />
+    <meta name="keywords" content="network engineering projects, home lab setup, Raspberry Pi projects, RetroPie, local LLM hosting, AI camera system" />
+    <meta name="author" content="Jeff Fuqua" />
+
 </head>
-    <h1>
-        My Networking Projects
-    </h1>
     <body>
-        <h2>
-            What Projects Am I Working On
-        </h2>
-            <p>
-                I'm currently working on multiple networking projects. I'm building a Retro Pie using a Raspberry Pi 4B. I'm wiring up my home office with the goal of getting video game consoles off of Wi-Fi and onto 
-                a wired connection for a stable connection. I'm building a locally hosted Large Language Model (LLM). I'm building an enhanced home security camera system using Raspberry Pi's and the Raspberry 
-                Pi AI Camera Module.
-            </p>
+        <article>
+            <header>
+                <h1>My Networking Projects</h1>
+                <p><em>Documenting my journey into becoming a better network engineer through hands-on networking projects.</em></p>
+            </header>
+
+            <section id="networking-projects">
+                <h2>Current Networking Projects</h2>
+                    <p>
+                        I’m tackling a variety of <strong>network engineering projects</strong> to expand my skills and home lab capabilities:
+                    </p>
+                <ul>
+                    <li>
+                        <strong>RetroPie Gaming Server:</strong> Building a RetroPie console on a Raspberry Pi 4B to play older and lost video games.
+                    </li>
+                    <li>
+                        <strong>Wired Home Office Upgrade:</strong> Wiring my home office to move gaming consoles and workstations off Wi-Fi and onto a stable, gigabit Ethernet network.
+                    </li>
+                    <li>
+                        <strong>Locally Hosted LLM:</strong> Deploying a small <em>large language model</em> in my lab environment for on-prem inference and privacy.
+                    </li>
+                    <li>
+                        <strong>AI-Powered Security Cameras:</strong> Designing an enhanced home security system using Raspberry Pi boards and the official AI Camera Module.
+                    </li>
+                </ul>
+            </section>
+
+            <footer>
+                <p>&copy; 2025 Jeff Fuqua. All rights reserved.</p>
+            </footer>
+        </article>
     </body>
 </html>
