--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <section id="links">
                 <div>
-                    <a href="building_a_blog.html">Building a Tech Blog from Scratch in 2025 – A Network Engineer’s Journey</a>
+                    <a href="building_a_blog.html">Building a Tech Blog</a>
                 </div>
                 <div>
                     <a href="projects.html">My Networking Projects</a>
